--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -666,6 +666,16 @@ config MM_EVENT_STAT
 
 	  System can dump the trace into bugreport when user allows the dump.
 
+config VMAP_LAZY_PURGING_FACTOR
+	int "multiplier to the size of purged vmap areas"
+	default "8" if ARM
+	default "32"
+	help
+	  It is used as a multiplier to the max VA pages purged in a
+	  single attempt. For 32-bit in order to reduce fragmentation
+	  of vmalloc space, we decrease the default value to "8".
+
+
 config GENERIC_EARLY_IOREMAP
 	bool
 
