--- a/arch/arm64/configs/mvk_defconfig
+++ b/arch/arm64/configs/mvk_defconfig
@@ -45,7 +45,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-MVK_v11.11"
+CONFIG_LOCALVERSION="-MVK_v11.12_r4"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZ4=y
@@ -268,18 +268,18 @@ CONFIG_HAVE_GCC_PLUGINS=y
 CONFIG_CC_STACKPROTECTOR_NONE=y
 # CONFIG_CC_STACKPROTECTOR_REGULAR is not set
 # CONFIG_CC_STACKPROTECTOR_STRONG is not set
-CONFIG_ARCH_SUPPORTS_THINLTO=y
-CONFIG_THINLTO=y
-CONFIG_THIN_ARCHIVES=y
+# CONFIG_ARCH_SUPPORTS_THINLTO is not set
+# CONFIG_THINLTO is not set
+# CONFIG_THIN_ARCHIVES is not set
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
-CONFIG_LTO=y
-CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
-# CONFIG_LTO_NONE is not set
-CONFIG_LTO_CLANG=y
-CONFIG_CFI=y
+# CONFIG_LTO is not set
+# CONFIG_ARCH_SUPPORTS_LTO_CLANG is not set
+CONFIG_LTO_NONE=y
+# CONFIG_LTO_CLANG is not set
+# CONFIG_CFI is not set
 # CONFIG_CFI_PERMISSIVE is not set
-# CONFIG_CFI_CLANG=y
-CONFIG_CFI_CLANG_SHADOW=y
+# CONFIG_CFI_CLANG is not set
+# CONFIG_CFI_CLANG_SHADOW is not set
 CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
 # CONFIG_ROP_PROTECTION_NONE is not set
 # CONFIG_SHADOW_CALL_STACK=y
