Revert and change optimizations

--- a/arch/arm64/configs/mvk_defconfig
+++ b/arch/arm64/configs/mvk_defconfig
@@ -272,14 +272,14 @@ CONFIG_CC_STACKPROTECTOR_NONE=y
 # CONFIG_THINLTO is not set
 # CONFIG_THIN_ARCHIVES is not set
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
-# CONFIG_LTO is not set
-# CONFIG_ARCH_SUPPORTS_LTO_CLANG is not set
-CONFIG_LTO_NONE=y
-# CONFIG_LTO_CLANG is not set
-# CONFIG_CFI is not set
+CONFIG_LTO=y
+CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
+# CONFIG_LTO_NONE is not set
+CONFIG_LTO_CLANG=y
+CONFIG_CFI=y
 # CONFIG_CFI_PERMISSIVE is not set
-# CONFIG_CFI_CLANG is not set
-# CONFIG_CFI_CLANG_SHADOW is not set
+# CONFIG_CFI_CLANG=y
+CONFIG_CFI_CLANG_SHADOW=y
 CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
 # CONFIG_ROP_PROTECTION_NONE is not set
 # CONFIG_SHADOW_CALL_STACK=y
@@ -4277,7 +4277,7 @@ CONFIG_MSM_PIL_MSS_QDSP6V5=y
 CONFIG_ICNSS=y
 # CONFIG_ICNSS_DEBUG is not set
 CONFIG_QCOM_COMMAND_DB=y
-CONFIG_MSM_PERFORMANCE=y
+# CONFIG_MSM_PERFORMANCE is not set
 CONFIG_MSM_CDSP_LOADER=y
 CONFIG_QCOM_SMCINVOKE=y
 CONFIG_MSM_EVENT_TIMER=y
