More optimization changes

--- a/arch/arm64/configs/mvk_defconfig
+++ b/arch/arm64/configs/mvk_defconfig
@@ -45,7 +45,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-MVK_v11.12"
+CONFIG_LOCALVERSION="-MVK_v11.13_v1"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZ4=y
@@ -278,8 +278,8 @@ CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_LTO_CLANG=y
 CONFIG_CFI=y
 # CONFIG_CFI_PERMISSIVE is not set
-# CONFIG_CFI_CLANG=y
-CONFIG_CFI_CLANG_SHADOW=y
+# CONFIG_CFI_CLANG is not set
+# CONFIG_CFI_CLANG_SHADOW is not set
 CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
 # CONFIG_ROP_PROTECTION_NONE is not set
 # CONFIG_SHADOW_CALL_STACK=y
@@ -4244,7 +4244,7 @@ CONFIG_QCOM_EUD=y
 # CONFIG_QCOM_WATCHDOG_V2 is not set
 # CONFIG_QCOM_WDOG_IPI_ENABLE is not set
 CONFIG_QPNP_PBS=y
-CONFIG_QCOM_MEMORY_DUMP_V2=y
+# CONFIG_QCOM_MEMORY_DUMP_V2 is not set
 # CONFIG_MSM_DEBUG_LAR_UNLOCK is not set
 # CONFIG_QCOM_MINIDUMP is not set
 # CONFIG_MSM_RPM_SMD is not set
@@ -4972,7 +4972,7 @@ CONFIG_BOOTPARAM_HARDLOCKUP_PANIC_VALUE=0
 # CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC is not set
 CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC_VALUE=0
 # CONFIG_PANIC_ON_RECURSIVE_FAULT is not set
-CONFIG_DETECT_HUNG_TASK=y
+# CONFIG_DETECT_HUNG_TASK is not set
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
 # CONFIG_BOOTPARAM_HUNG_TASK_PANIC is not set
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=0
