--- a/arch/arm64/configs/mvk_defconfig
+++ b/arch/arm64/configs/mvk_defconfig
@@ -272,11 +272,12 @@ CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 # CONFIG_LTO_CLANG is not set
 CONFIG_CFI=y
 # CONFIG_CFI_PERMISSIVE is not set
-CONFIG_CFI_CLANG=y
-CONFIG_CFI_CLANG_SHADOW=y
+# CONFIG_CFI_CLANG is not set
+# CONFIG_CFI_CLANG_SHADOW is not set
 CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
 # CONFIG_ROP_PROTECTION_NONE is not set
-CONFIG_SHADOW_CALL_STACK=y
+# CONFIG_SHADOW_CALL_STACK is not set
+CONFIG_LLVM_POLLY=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
